# learn-spanish

./: README.md  pyproject.toml
api/: index.py
learn_spanish/: __init__.py  main.py
